/* 
* sender.proto
*
* definition of the sender rpc service
*/

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/burstsms/mtmo-tp/backend/sender/rpc/senderpb";

package senderpb;

message NoParams {}
message NoReply {}

message Sender {
    string Id = 1;
    string Account_id = 2;
    string Address = 3;
    string MMS_provider_key = 4;
    repeated string Channels = 5;
    string Country = 6;
    string Comment = 7;
    google.protobuf.Timestamp Created_at = 8;
    google.protobuf.Timestamp Updated_at = 9;
}

message FindSenderByAddressAndAccountIDParams {
    string Account_id = 1;
    string Address = 2; 
}

message FindSenderByAddressAndAccountIDReply {
    Sender Sender = 1;
}

message FindSendersByAccountIdParams {
    string Account_id = 1;
}

message FindSendersByAccountIdReply {
    repeated Sender Senders = 1;
}

message FindSendersByAddressParams {
    string Address = 2; 
}

message FindSendersByAddressReply {
    repeated Sender Senders = 1;
}

message CreateSendersFromCSVDataURLParams {
    bytes CSV = 1;
}

message CreateSendersFromCSVDataURLReply {
    repeated Sender Senders = 1;
}

service Service {
    rpc FindSenderByAddressAndAccountID(FindSenderByAddressAndAccountIDParams) returns (FindSenderByAddressAndAccountIDReply);
    rpc FindSendersByAccountId(FindSendersByAccountIdParams) returns (FindSendersByAccountIdReply);
    rpc FindSendersByAddress(FindSendersByAddressParams) returns (FindSendersByAddressReply);
    rpc CreateSendersFromCSVDataURL(CreateSendersFromCSVDataURLParams) returns (CreateSendersFromCSVDataURLReply);
}
